# lab-observability-apps

./: build.rs  ca.crt  ca.key  deploy-lab.sh  go_clean.sh  issuer.crt  issuer.key  k8s.yml  script.sh
micro-1/: Cargo.toml  deployment.yaml  dockerfile
micro-1/proto/: service.proto
micro-1/src/: lib.rs  main.rs
micro-2/: deployment.yaml  dockerfile  go.mod  go.sum  main.go
micro-3/: deployment.yaml  dockerfile  package-lock.json  package.json
micro-3/src/: index.ts  micro.proto
observability_kubernetes_base/: deployment_grafana.yaml  deployment_jaeger.yaml  deployment_loki.yaml  deployment_opentelemetry.yaml
