[package]
name = "micro-1"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = { version = "0.25.0", features = ["trace", "logs"] }
opentelemetry-jaeger = { version = "0.22.0", features = ["rt-tokio"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1.0", features = ["full"] }
opentelemetry-otlp = "0.25.0"
opentelemetry_sdk = { version = "0.25.0", features = ["rt-tokio", "logs"] }
opentelemetry-appender-tracing = "0.25.0"
opentelemetry-appender-log = { version = "0.25.0", default-features = false }
opentelemetry-semantic-conventions = "0.25.0"
log = "0.4.0"
opentelemetry-stdout = "0.25.0"
hyper = "1.5.0"
tonic = { version = "0.12.3", features = ["transport", "tls"] } # Features "transport" y "tls" AÑADIDAS
prost = "0.13.3"